tests/negative/comptime/return_in_comptime.orng
fn main() -> Int { 
    comptime { return 3 } 
}
